# To-Do-In-Rust

./: Cargo.toml  README.md  build.rs  docker-compose.yml  state.json
css/: base.css
javascript/: main.js
migrations/2024-03-03-144511_create_to_do_items/: up.sql
migrations/2024-03-04-152951_create_users/: down.sql  up.sql
scripts/: shell commands.txt  wait_for_database.sh
src/: config.rs  counter.rs  database.rs  jwt.rs  main.rs  schema.rs
src/json_serialization/: login.rs  login_response.rs  mod.rs  new_user.rs  to_do_item.rs  to_do_items.rs
src/models/item/: item.rs  mod.rs  new_item.rs
src/models/user/: new_user.rs  user.rs
src/to_do/: enums.rs  mod.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/views/: mod.rs
src/views/app/: content_loader.rs  items.rs  mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/users/: create.rs  mod.rs
templates/: main.html
templates/components/: header.css  header.html
