[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde_json = "1.0.113"
serde = {version = "1.0.113", features = ["derive"]} # features allows us to decorate structs with serde traits - building my own deserialization
actix-service = "2.0.2"
futures = "0.3.30"
