[package]
name = "web_app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
serde_yaml = "0.8.23"
serde = { version = "1.0.136", features = ["derive"] }

[dependencies]
redis = "0.21.5"
actix-web = "4.5.1"
actix-cors = "0.6.1"
serde_json = "1.0.113"
serde = {version = "1.0.113", features = ["derive"]} # features allows us to decorate structs with serde traits - building my own deserialization
serde_yaml = "0.8.23"
lazy_static = "1.4.0"
actix-service = "2.0.2"
futures = "0.3.30"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = {version = "0.4.19", features = ["serde"]}
env_logger = "0.9.0"
bcrypt = "0.13.0"
uuid = {version="1.0.0", features = ["serde", "v4"]}
jsonwebtoken = "8.1.0"